--- a/src/slurm-configurator/templates/slurmctld_general.yaml
+++ b/src/slurm-configurator/templates/slurmctld_general.yaml
@@ -31,3 +31,6 @@ KillWait: 30
 MaxJobCount: 10000
 MinJobAge: 3600
 ReturnToService: 0
+
+NodeName: "dev[0-25] NodeAddr=edev[0-25] Weight=16 State=FUTURE"
+PartitionName: "debug Nodes=dev[0-25] Default=YES"
